clusters/default/infra/system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openbao
  labels:
    app.kubernetes.io/name: openbao
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
    tier: security
---
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
    tier: application
---
apiVersion: v1
kind: Namespace
metadata:
  name: registry
  labels:
    app.kubernetes.io/name: registry
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
    tier: application
---
apiVersion: v1
kind: Namespace
metadata:
  name: woodpecker
  labels:
    app.kubernetes.io/name: woodpecker
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
    tier: ci
---
apiVersion: v1
kind: Namespace
metadata:
  name: buildkitd
  labels:
    app.kubernetes.io/name: buildkitd
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
    tier: ci
---
apiVersion: v1
kind: Namespace
metadata:
  name: woodpecker-pipelines
  labels:
    app.kubernetes.io/name: woodpecker-pipelines
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
    tier: ci
