clusters/default/infra/system/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forgejo-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: forgejo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 3000
    - from:
        - podSelector:
            matchLabels:
              app: woodpecker
      ports:
        - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: woodpecker-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: woodpecker
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 8000
    - from:
        - podSelector:
            matchLabels:
              app: woodpecker-agent
      ports:
        - port: 9000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: registry-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: registry
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 5000
    - from:
        - podSelector:
            matchLabels:
              app: buildkitd
      ports:
        - port: 5000
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: woodpecker-pipelines
      ports:
        - port: 5000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: buildkitd-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: buildkitd
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: woodpecker-pipelines
      ports:
        - port: 1234
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openbao-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: openbao
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: flux-system
      ports:
        - port: 8200
